style.css
/* ... */
a:hover {
  color: var(--hover-link-color);
}

p {
  line-height: var(--lineHeight-150);
}

img {
  display: block;
}

h1,
h2,
h3,
h4 {
  letter-spacing: var(--spacing-03);
  line-height: var(--lineHeight-120);
  font-family: var(--ff-primary);
}

h1 {
  font-size: 6.4rem;
}

h2 {
  font-size: 4rem;
}

address {
  font-style: normal;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  appearance: none;
}

.section-header {
  font-size: var(--fs-12);
  font-weight: var(--fw-800);
  text-transform: uppercase;
}

.section-title {
  font-size: var(--fs-40);
  font-weight: var(--fw-600);
}

.section-suptitle {
  font-size: var(--fs-16);
  font-weight: var(--fw-500);
  color: var(--grey200);
}

button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding: var(--margin16) var(--margin24);
  color: var(--primary-white);
  background-color: var(--primary-color);
  border: none;
  border-radius: var(--borderRadius8);
  -webkit-border-radius: var(--borderRadius8);
  -moz-border-radius: var(--borderRadius8);
  -ms-border-radius: var(--borderRadius8);
  -o-border-radius: var(--borderRadius8);
  font-size: var(--fs-14);
  font-weight: var(--fw-700);
  font-family: var(--ff-primary);
  transition: var(--transition);
  -webkit-transition: var(--transition);
  -moz-transition: var(--transition);
  -ms-transition: var(--transition);
  -o-transition: var(--transition);
}

button:hover {
  color: var(--secondary-white);
  background-color: var(--hover-link-color);
}

.container {
  width: 100%;
  max-width: 120rem;
  margin: 0 auto;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0;
  position: fixed;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  height: var(--headerHeight);
  background-color: var(--primary-white);
  z-index: 9;
  box-shadow: 0rem .5rem .8rem 0rem rgba(0, 0, 0, 0.04);
}

.header-wrapper {
  max-width: 120rem;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 0 auto;
}

.logo-title {
  font-size: var(--fs-22);
  font-weight: var(--fw-700);
}

.nav-logo {
  display: none;
}

.mobile-btn-phone {
  display: none;
}

.navigation-item {
  font-size: var(--fs-15);
  font-weight: var(--fw-600);
}

.navigation {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navigation-list {
  margin: 0rem 2.4rem 0rem 0rem;
  display: flex;
  gap: var(--margin16);
}

.navigation-btn-wrapper {
  display: flex;
  justify-content: space-between;
  gap: var(--margin08);
}

.leaveRequest {
  padding: var(--margin16);
  cursor: pointer;
}

.navigation-phone {
  text-wrap: nowrap;
  max-width: 15rem;
  padding: var(--margin16);
  font-size: var(--fs-14);
  font-weight: var(--fw-700);
  line-height: normal;
  letter-spacing: var(--spacing-02);
  color: var(--primary-color);
  background-color: var(--primary-white);
  border: 0.1rem solid var(--primary-color);
  border-radius: var(--borderRadius8);
  -webkit-border-radius: var(--borderRadius8);
  -moz-border-radius: var(--borderRadius8);
  -ms-border-radius: var(--borderRadius8);
  -o-border-radius: var(--borderRadius8);
}

.navigation-phone:hover {
  color: var(--primary-white);
  background-color: var(--primary-color);
}

.mobile-nav-toggle,
.nav-item {
  display: none;
}

.main-wrapper {
  margin: calc(6.4rem + (var(--headerHeight))) 0rem 6.4rem 0rem;
  display: grid;
  grid:
    "header header" auto "img img" auto / auto auto;
  place-items: center;
}

.main-text-wrapper {
  width: 100%;
  max-width: 120rem;
  grid-area: header;
  display: grid;
  grid:
    "title text" auto / auto auto;
  align-items: flex-end;
}

.main-title {
  max-width: 58.3rem;
  grid-area: title;
  font-size: var(--fs-40);
  font-weight: var(--fw-600);
}

.main-description {
  max-width: 39.1rem;
  grid-area: text;
  font-size: var(--fs-16);
  font-weight: var(--fw-500);
  color: var(--grey200);
}

.main-img {
  width: 100%;
  max-width: 137.6rem;
  margin: 6.4rem 0rem 0rem 0rem;
  grid-area: img;
  border-radius: var(--borderRadius16);
  -webkit-border-radius: var(--borderRadius16);
  -moz-border-radius: var(--borderRadius16);
  -ms-border-radius: var(--borderRadius16);
  -o-border-radius: var(--borderRadius16);
}

.main-benefits-wrapper {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(4, 12.8rem);
  gap: var(--margin08);
  width: 100%;
  height: auto;
  max-width: 120rem;
  margin: 0 auto;
}

.main-benefits-item {
  padding: 2.4rem 3.2rem;
  background-color: var(--secondary-white);
  border: 0.1rem solid var(--thirdly-white);
  border-radius: var(--borderRadius16);
  -webkit-border-radius: var(--borderRadius16);
  -moz-border-radius: var(--borderRadius16);
  -ms-border-radius: var(--borderRadius16);
  -o-border-radius: var(--borderRadius16);
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.benefits-item-img {
  margin: 0rem calc(var(--margin16)*2) 0rem 0rem;
  width: 8rem;
  height: 8rem;
  border-radius: 10rem;
  border: .1rem solid #F4F4F5;
  background: #FFF;
  box-shadow: 0rem .5rem 2.5rem 0rem rgba(0, 0, 0, 0.04);
  display: flex;
  justify-content: center;
  align-items: center;
}

.div1 {
  grid-area: 1 / 1 / 2 / 3;
}

.div2 {
  grid-area: 1 / 3 / 2 / 5;
}

.div3 {
  grid-area: 2 / 1 / 3 / 5;
}

.div4 {
  grid-area: 3 / 1 / 4 / 3;
}

.div5 {
  grid-area: 3 / 3 / 4 / 5;
}

.div6 {
  grid-area: 4 / 1 / 5 / 5;
}

.benefits-title {
  font-size: var(--fs-18);
  font-weight: var(--fw-600);
}

.ready-solution {
  margin: 17.6rem auto 0rem;
  position: relative;
  text-align: center;
}

.ready-solution-title {
  margin: 0rem 0rem var(--margin16) 0rem;
}

.ready-solution-suptitle {
  margin: 0rem 0rem 5.6rem 0rem;
}
/* ... */

